--- a/success_rate_diagnostic.ipynb
+++ b/success_rate_diagnostic.ipynb
@@ -12,8 +12,7 @@
     "\n",
     "Below is a small database of payment transactions from 2019 to 2020 of Paytm Wallet. The database\n",
     "includes 6 tables:\n",
-    "- fact_transaction: Store information of all types of transactions: Payments, Top-up, Transfers,\n",
-    "Withdrawals\n",
+    "- fact_transaction: Store information of all types of transactions: Payments, Top-up, Transfers, Withdrawals\n",
     "- dim_scenario: Detailed description of transaction types\n",
     "- dim_payment_channel: Detailed description of payment methods\n",
     "- dim_platform: Detailed description of payment devices\n",
